<resources>
    <string name="app_name">MidtermExam</string>
    <string name="personal_information">Personal Information</string>
    <string name="full_Name">Full Name</string>
    <string name="age">Age</string>
    <string name="age_input">18</string>
    <string name="height">Height</string>
    <string name="height_input">21</string>
    <string name="weight">Weight\n</string>
    <string name="weight_input">200</string>
</resources>